force-app/main/default/objects/User_Story_Commit__c/fields/CommitMessage__c.field-meta.xml
<CustomField>
    <fullName>CommitMessage__c</fullName>
    <formula>Snapshot_Commit__r.Commit_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commit Message</label>
    <type>Text</type>
</CustomField>