force-app/main/default/objects/User_Story_Commit__c/fields/LastJobExecutionId__c.field-meta.xml
<CustomField>
    <fullName>LastJobExecutionId__c</fullName>
    <label>Last Job Execution ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>